# ambernet-rust-engine

./: .gitignore  Cargo.toml  Makefile  README.md  build-client.js  comments.txt  git-reset-author.sh  git-set-local.sh  git-set-remotes.sh  package.json
__old2/: lib.rs
asn-decoder-tiled/: Cargo.toml
asn-decoder-tiled/src/: lib.rs  test_serde.rs  tiles2.tsx
asn-decoder-tiled/src/quick_xml_decoder/: image.rs  mod.rs  test_serde.rs  tile.rs  tileset.rs
asn-decoder-tiled/src/tsx_decoder/: mod.rs  test_serde.rs  tileset.rs
asn-image/: Cargo.toml
asn-image/src/: lib.rs
asn-logger/: Cargo.toml
asn-logger/src/: lib.rs  log_level.rs  mapper.rs
asn-runner-winit/: Cargo.toml
asn-runner-winit/examples/01_hello/: main.rs  my_context.rs  my_handler.rs
asn-runner-winit/examples/02_scene/: main.rs
asn-runner-winit/src/: asn_runner.rs  lib.rs  runner.rs  runner_trait.rs  wgpu_context.rs  winit_context.rs  winit_event_processor.rs  winit_runner.rs
asn-runner-winit/src/asn_scene/: asn_scene.rs  asn_view2d.rs  mod.rs
asn-runner-winit/src/asn_winapi/: asn_scene.rs  asn_view2d.rs  asn_window.rs  mod.rs  wgpu_context.rs
asn-runner-winit/src/winapi_wgpu/: mod.rs  winapi_wgpu.rs
asn-web-release/: Cargo.toml  Makefile  index.js  package-lock.json
asn-web-release/examples/: event_stack.rs
asn-web-release/modules/asn-engine-released/: Cargo.toml
asn-web-release/modules/asn-engine-released/examples/: deque.rs
asn-web-release/modules/asn-engine-released/src/: engine.rs  handler.rs  lib.rs
asn-web-release/modules/asn-wgpu-released/: Cargo.toml
asn-web-release/modules/asn-wgpu-released/src/: event_converter.rs  lib.rs  render_manager_old.rs  wgpu_utils.rs
asn-web-release/modules/asn-winit-released/: Cargo.toml
asn-web-release/modules/asn-winit-released/examples/: custom_proxy.rs
asn-web-release/modules/asn-winit-released/src/: application_handler.rs  event_converter.rs  lib.rs
asn-web-release/src/: engine_interface.rs  handler.rs  lib.rs  lib_old.rs  main.rs
asn-web-release/src/engine/: engine.rs  handler.rs  mod.rs
asn-web-release/src/engine_interface/: mod.rs
asn-web-release/src/handler/: handle_function.rs  mod.rs
asn-web-release/src/wgpu_pack/: mod.rs
crate/: Cargo.toml
crate/src/: color_quad.rs  lib.rs  utils.rs
crate/src/ambernet/: api.rs  mod.rs
crate/src/ambernet/core/: mod.rs
crate/src/ambernet/render/: mod.rs
crate/src/amberskynet/: amber_net_engine.rs  amberskynet.rs  api.rs  engine.rs  logger.rs  mod.rs  store.rs
crate/src/logger/: mod.rs  utils.rs
crate/src/mycore/: logger.rs  mod.rs  render.rs
crate/src/render/: gl_utils.rs  mod.rs
rs-amberskynet/: Cargo.toml
rs-amberskynet/examples/: 01_hello.rs
rs-amberskynet/examples/00_working/: main.rs
rs-amberskynet/examples/01_hello/: main.rs
rs-amberskynet/examples/02_quad/: main.rs
rs-amberskynet/examples/03_colors/: main.rs
rs-amberskynet/examples/03_texture2d/: lib.rs  main.rs
rs-amberskynet/examples/03_view2d/: gfx_config.rs  main.rs  model_vertex.rs  view_2d.rs
rs-amberskynet/examples/04_view2d/: main.rs
rs-amberskynet/examples/view_2d/: mod.rs
rs-amberskynet/src/: asn_engine.rs  camera_uniform.rs  context.rs  events.rs  ext_core.rs  ext_handler_trait.rs  lib.rs  main.rs  shader.wgsl  shaders.rs  state.rs
rs-amberskynet/src/amberskynet/: asn_engine.rs  mod.rs
rs-amberskynet/src/camera/: camera.rs  camera_controller.rs  camera_uniform.rs  mod.rs
rs-amberskynet/src/color_quad/: mod.rs
rs-amberskynet/src/core/: array2d.rs  array_2d.rs  axe_dimension.rs  direction.rs  error.rs  mod.rs  point_2d.rs  pos2d.rs  size2d.rs
rs-amberskynet/src/core_gfx/: gfx_context.rs  mod.rs  pixel.rs  point2d.rs  texture.rs
rs-amberskynet/src/data/: mod.rs
rs-amberskynet/src/engine/: asn_engine_state.rs  mod.rs  state.rs  viewport.rs  viewport_desc.rs  window.rs
rs-amberskynet/src/gfx/: bind_groups.rs  defines.rs  gfx_error.rs  mod.rs  texture.rs
rs-amberskynet/src/renderer/: mod.rs  window.rs
rs-amberskynet/src/resource/: mod.rs
rs-amberskynet/src/state/: mod.rs
rs-amberskynet/src/texture/: mod.rs
rs-amberskynet/src/vertex/: mod.rs
rs-amberskynet/src/view2d/: mod.rs
rs-amberskynet/src/view_2d/: mod.rs
sannbox-wgpu/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
sannbox-wgpu/src/: lib.rs  main.rs
sannbox-wgpu/src/engine/: mod.rs
sannbox-wgpu/src/handler/: config.rs  loaders.rs  map_filers.rs  mod.rs
sannbox-wgpu/src/map/: mod.rs
sannbox-wgpu/src/tileset/: mod.rs
src/: Cargo.toml  main.rs
src/amberskynet/: Cargo.toml  README.md
src/amberskynet-logger-web-console/: Cargo.toml
src/amberskynet/src/: cell_game.rs  game_utils.rs  key_utils.rs  lib.rs  utils.rs
src/amberskynet_logger_web/: Cargo.toml
src/amberskynet_logger_web/src/: lib.rs
src/asn_images/: Cargo.toml
src/asn_images/src/: lib.rs
src/asn_math/: Cargo.toml
src/asn_math/src/: lib.rs
src/asn_render_color_quad/: Cargo.toml
src/asn_render_color_quad/src/: lib.rs  utils.rs
src/asn_render_webgl/: Cargo.toml
src/asn_render_webgl/src/: lib.rs  utils.rs
src/asn_test_2d/: Cargo.toml
src/asn_test_2d/src/: lib.rs
src/asn_tiled/: Cargo.toml
src/asn_tiled/src/: laboratory3.json  lib.rs  loader.rs  map.rs  utils.rs
src/asn_utils_js/: Cargo.toml
src/asn_utils_js/src/: helpers.js  lib.rs
src/asn_view_2d/: Cargo.toml
src/asn_view_2d/src/: buffer.rs  frag.glsl  lib.rs  map.rs  render_data.rs  render_tiles.rs  shaders.rs  texture_data.rs  utils.rs  view_utils.rs
src/core/: Cargo.toml
src/core/asn_array_2d/: Cargo.toml
src/core/asn_map/: Cargo.toml
src/core/src/: array_2d.rs  camera_2d.rs  delta_2d.rs  direction.rs  lib.rs  point_2d.rs  rect_2d.rs  size_2d.rs
src/loaders/asn_images/: Cargo.toml
src/loaders/asn_tiled/: Cargo.toml
src/mylogger/: Cargo.toml
src/renders/test_triangle/: Cargo.toml
wasm-and-bin-examples/view2d/: Cargo.toml  Makefile  index.html  index.js  package-lock.json  webpack.config.js
wasm-and-bin-examples/view2d/src/: example.rs  handler.rs  lib.rs  main.rs  wasm_utils.rs
(+351 files in other folders)
