[workspace]
resolver = "2"
members = [
    "asn-logger",
    "asn-core",
    "rs-amberskynet",
    "rs-core",
    "rs-gfx-core",
    "rs-gfx-wgpu",
    "rs-amberskynet",
    "wasm-and-bin-examples/*"
]

#exclude = []
#default-members = [
#    "asn-logger",
#    "rs-core",
#    "rs-gfx-core",
#    "rs-gfx-wgpu",
#    "rs-amberskynet"
#]
