[package]
name = "asn-decoder-tiled"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asn-core = { path = "../asn-core" }
asn-logger = { path= "../asn-logger" }
xmlparser = "0.13.5"
serde-xml-rs = "0.6.0"
serde = { version = "1.0.192", features = ["derive"] }
#serde = "1.0.192"
#serde_derive = "1.0.192"
