[package]
name = "asn-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asn-core = { path = "../asn-core" }
[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png", "jpeg"]
