[package]
name = "asn-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
env_logger = "0.10.0"
log = "0.4.18"
chrono = { version = "0.4.26", features = ["wasmbind"] }
fern = { version = "0.6.2", features = ["colored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"]}
