[package]
name = "asn-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
log = "0.4.21"
chrono = { version = "0.4.38", features = ["wasmbind"] }
fern = { version = "0.6.2", features = ["colored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"]}
