[package]
name = "asn-runner-winit"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28.6"
asn-core = { path = "../asn-core" }
asn-logger = { path = "../asn-logger" }
asn-scene-view-core = { path = "../asn-scene-view-core" }
wgpu = { version = "0.16" }
uuid = { version="1.3.3", features = ['wasm-bindgen', 'v4'] }
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
