[package]
name = "asn-web-release"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

#[[bin]]
#name = "sannbox-wgpu"
#path = "src/main.rs"

[dependencies]
cfg-if = "1"
asn-logger = { path = "../asn-logger" }
asn-core = { path = "../asn-core" }
asn-wgpu-released = { path = "./modules/asn-wgpu-released" }
wasm-bindgen = "0.2.92"
