[package]
name = "rust-test"
version = "0.1.0"
authors = ["Random Ambersky"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "*"
uuid = { version="*", features = ['wasm-bindgen', 'v4'] }

[dependencies.wasm-bindgen]
version = "*"

[dependencies.web-sys]
version = "*"
features = [
    "Window",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext'
]
