[package]
name = "rust-test"
version = "0.1.0"
authors = ["Random Ambersky"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "*"
uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
js-sys = "*"

[dependencies.wasm-bindgen]
version = "*"

[dependencies.web-sys]
version = "*"
features = [
    "Window",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation'
]
