[package]
name = "rs-amberskynet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
winit = "0.28"
rand = "0.8.5"
rs-core = { path = "../rs-core" }
rs-core-gfx = { path = "../rs-core-gfx" }
rs-gfx-wgpu = { path = "../rs-gfx-wgpu" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
