[package]
name = "rs-amberskynet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
pollster = "0.3"
winit = "0.28"
rand = { version = "0.8.5", default-features = false }
asn-logger = { path = "../asn-logger"}
rs-core = { path = "../rs-core" }
rs-gfx-core = { path = "../rs-gfx-core" }
rs-gfx-wgpu = { path = "../rs-gfx-wgpu" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16", features = ["webgl"]}

[dev-dependencies]
wgpu = "0.16"
