[package]
name = "sannbox-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sannbox-wgpu"
path = "src/main.rs"

[dependencies]
asn-logger = { path = "../asn-logger" }
asn-core = { path = "../asn-core" }
asn-decoder-image = { path = "../asn-decoder-image" }
asn-decoder-tiled = { path = "../asn-decoder-tiled" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"]}
pollster = "0.3.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.18.0", features = ["webgl"]}
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
]}
