[package]
name = "sannbox-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sannbox-wgpu"
path = "src/main.rs"

[dependencies]
asn-logger = { path = "../asn-logger" }
asn-core = { path = "../asn-core" }
asn-decoder-image = { path = "../asn-decoder-image" }
asn-decoder-tiled = { path = "../asn-decoder-tiled" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
wgpu = "0.19.0"
winit = { version = "0.29.10", features = ["rwh_05"]}
pollster = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
quick-xml = { version = "0.31.0", features = ["serialize"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.19.0", features = ["webgl"]}
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = [
    "Document",
    "Window",
    "Element",
]}
