[workspace]

members = [
    "amberskynet",
    "amberskynet_logger_web",
    "asn_render_webgl",
    "./core/asn_math",
    "./core/asn_array_2d",
    "asn_images",
    "loaders/asn_tiled",
    "asn_test_2d",
    "asn_view_2d",
    "asn_utils_js",
    "./renders/tests/color_quad",
    "./renders/tests/textured_quad",
    "./renders/tests/triangle"
]
