[package]
name = "amberskynet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = 'z'
#opt-level = 's'

[dependencies]
amberskynet_logger_web = { path="../amberskynet_logger_web" }
console_error_panic_hook = "*"
uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
js-sys = "*"

[dependencies.wasm-bindgen]
version = "*"
[dependencies.web-sys]
version = "*"
features = [
    "Window",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation'
]
