[package]
name = "amberskynet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = 'z'
#opt-level = 's'

[dependencies]
amberskynet_logger_web = { path="../amberskynet_logger_web" }
asn_render_webgl = { path="../asn_render_webgl" }
asn_test_2d = { path="../asn_test_2d" }
asn_view_2d = { path="../asn_view_2d" }
asn_render_color_quad = { path="../asn_render_color_quad" }
test_triangle = { path="../renders/tests/test_triangle" }
console_error_panic_hook = "*"
uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
js-sys = "*"

[dependencies.wasm-bindgen]
version = "*"

