[package]
name = "amberskynet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
debug = true
lto = true
opt-level = 'z'
#opt-level = 's'

[features]
console_error_panic_hook=[]

[dependencies]
amberskynet_logger_web = { path="../amberskynet_logger_web" }
asn_render_webgl = { path="../asn_render_webgl" }
asn_test_2d = { path="../asn_test_2d" }
asn_view_2d = { path="../asn_view_2d" }
asn_utils_js = { path="../asn_utils_js" }
asn_tiled = { path= "../loaders/asn_tiled" }
asn_map = { path= "../core/asn_map" }
color_quad = { path="../renders/tests/color_quad" }
textured_quad = { path="../renders/tests/textured_quad" }
triangle = { path="../renders/tests/triangle" }
console_error_panic_hook = "*"
uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
js-sys = "*"
wasm-bindgen = "*"
rand = "*"
