[package]
name = "asn_render_webgl"
version = "0.1.0"
edition = "2021"

[lib]
name = "asn_render_webgl"
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
js-sys = "*"
[dependencies.wasm-bindgen]
version = "*"
[dependencies.web-sys]
version = "*"
features = [
    "Window",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation'
]
