[package]
name = "asn_render_webgl"
version = "0.1.0"
edition = "2021"

[lib]
name = "asn_render_webgl"
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
amberskynet_logger_web = { path="../amberskynet_logger_web" }
asn_math = { path="../asn_math" }
asn_images = { path="../asn_images" }
js-sys = "*"
[dependencies.wasm-bindgen]
version = "*"
[dependencies.web-sys]
version = "*"
features = [
    "Window",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlTexture',
    'WebGlUniformLocation'
]
