[package]
name = "asn_view_2d"
version = "0.1.0"
edition = "2021"

[lib]
name = "asn_view_2d"
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
asn_render_webgl = { path="../asn_render_webgl" }
asn_images = { path="../asn_images" }
amberskynet_logger_web = { path="../amberskynet_logger_web" }
asn_math= { path="../asn_math" }
js-sys = "*"
[dependencies.wasm-bindgen]
version = "*"
[dependencies.web-sys]
version = "*"
features = [
    "Window",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation'
]
