[package]
name = "view2d"
version = "0.1.0"
edition = "2021"

[dependencies]
asn-logger = { path = "../../asn-logger"}
asn-runner-winit = { path = "../../asn-runner-winit" }
asn-core = { path = "../../asn-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "view2d-bin"
path = "src/main.rs"
