[package]
name = "asn-engine-released"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

#[[bin]]
#name = "sannbox-wgpu"
#path = "src/main.rs"

[dependencies]
asn-core = { path = "../../../asn-core" }
asn-logger = { path = "../../../asn-logger" }
asn-winit-released = { path = "../asn-winit-released" }
