[package]
name = "asn-wgpu-released"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asn-core = { path = "../../../asn-core" }
asn-logger = { path = "../../../asn-logger" }
winit = "0.30.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "22.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "22.1.0", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "webgpu",
    "webgl"
] }
