[package]
name = "asn-winit-released"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asn-core = { path = "../../../asn-core" }
asn-core-winapi = { path = "../../../asn-core-winapi" }
asn-logger = { path = "../../../asn-logger" }
asn-wgpu-released = { path = "../asn-wgpu-released" }
winit = "0.30.5"
